# AIew

./: .dockerignore  .gitignore  CHANGELOG.md  docker-compose.base.yml  docker-compose.local.yml  docker-compose.production.yml  eslint.config.js  package.json  pnpm-lock.yaml  release-please-config.json
.github/workflows/: cd.yml  ci.yml  pr-title.yml  release-please.yml  tokens-to-css.yml
apps/ai-server/: Dockerfile  pyproject.toml
apps/ai-server/app/: main.py  vi.py
apps/ai-server/app/api/v1/endpoints/: emotion.py  followup.py  memory_debug.py  pdf.py  question.py  session_log.py
apps/ai-server/app/config/prompt/: evaluation_prompt.txt  followup_prompt.txt  question_prompt.txt  session_evaluation_prompt.txt
apps/ai-server/app/core/: memory.py
apps/ai-server/app/models/: emotion.py  evaluation.py  followup.py  question.py
apps/ai-server/app/services/: answer_evaluator.py  emotion_analyst.py  followup_generator.py  memory_logger.py  preprocessor.py  question_generator.py
apps/ai-server/app/utils/: video_analysis.py
apps/core-api/: .env.example  Dockerfile  package.json  prisma.config.ts  vitest.config.ts
apps/core-api/prisma/: schema.prisma
apps/core-api/src/: app.ts  server.ts
apps/core-api/src/configs/: swagger-option.ts  swagger-ui-option.ts
apps/core-api/src/plugins/: github-oauth2.ts  githubOAuth2.ts  google-oauth2.ts  google-tts-auth.ts  googleOAuth2.ts  jwt.ts  prisma.ts  r2.ts  shared-schemas.ts  socket.ts
apps/core-api/src/plugins/services/: ai-client.ts  auth.ts  (+6 more)
apps/core-api/src/routes/: index.ts
apps/core-api/src/services/: aiClient.service.ts  interview.service.ts
apps/core-api/src/types/: ai.types.ts  interview.types.ts  jwt.ts
apps/core-api/src/utils/: schema-id.ts  schemaId.ts
apps/core-api/test/: helper.ts
apps/core-api/test/services/: interview.service.test.ts
apps/web-client/: .gitignore  Dockerfile  next.config.ts  package.json  tsconfig.json  vitest.config.mts
apps/web-client/.storybook/: main.ts  preview.ts
apps/web-client/scripts/: split-tokens.mjs  tokens.build.mjs
apps/web-client/src/: middleware.ts  proxy.ts
apps/web-client/src/app/: globals.css  layout.tsx  page.tsx
apps/web-client/src/components/: stateLayer.ts
apps/web-client/src/constants/: cacheTags.ts
apps/web-client/tokens/: tokens.json
apps/web-client/types/: interview-types.d.ts
docs/: SSH_SECURITY.md  SSL_AUTO_RENEWAL.md
infra/nginx/: nginx.prod.conf
infra/scripts/: deploy.sh  switch-upstream.sh
nginx/: nginx.local.conf  nginx.prod.conf  renew-cert.sh
scripts/: setup-ssh-security.sh
(+196 files in other folders)
