[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "나형진",email = "skgudwls@konkuk.ac.kr"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-core (>=0.3.72,<0.4.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "fer (>=22.5.1,<22.6.0)",
    "opencv-python (>=4.12.0,<4.13.0)",
    "numpy (>=2.0,<2.3.0)",
    "matplotlib (>=3.10.5,<3.11.0)",
    "pandas (>=2.3.2,<2.4.0)",
    "moviepy (==1.0.3)",
    "setuptools (>=80.9.0,<81.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.2"

